# TinyWebServer

./: 2023_04_04_ServerLog  CMakeLists.txt  future_work.txt  main.cpp  makefile  run.sh  server  yourdb.sql
root/: fans.html  judge.html  log.html  picture.html  register.html  video.html  welcome.html
